src/css/pods.css
.fnd #banner {
  background-image: url(../img/nyc.svg);
  background-size: 49px 24px;
  padding: 4px 0 0 57px;
}

.fnd #home:focus svg {
  transform: scale(0.32,0.33);
  margin-top: -11px;
  margin-left: -48.5px;
}

.fnd .splash .dia {
  top: 60px;
}
.fnd .splash h2 {
  text-align: center !important;
  font-size: 110%;
  margin: 0;
}
.fnd .splash .dia a.btn {
  width: 320px;
}
.fnd .splash .dia a.btn-yes {
  background-image: var(--speaker-icon-light);
}
.fnd .splash .dia a.btn-yes:focus {
  background-image: var(--speaker-icon-dark);
}
.fnd .splash .dia a.btn-yes:hover {
  background-image: var(--speaker-icon-light);
}

#marquee {
  display: none;
  border-top: 1px solid #F2DEDE;
  border-bottom: 1px solid #F2DEDE;
  background-color: #E75624;
  display: table;
  position: fixed;
  top: 35px;
  right: 0;
  left: auto;
  height: 24px;
  margin: 0;
  z-index: 0;
  width: 400px;
}
.alert #marquee {
  display: block;
}
.alert #tabs {
  top: 60px;
}
.alert #marquee div>div>div {
  position: absolute;
  white-space: nowrap;
  padding: 3px;
  animation: alert 15s linear infinite;
  color: #FCED04;
}
.alert #marquee div>div>div * {
  color: #FCED04;
}
@keyframes alert {
  0% {
    right: -200%;
  }
  100% {
    right: 100%;
  }
}

@keyframes alert-large {
  0% {
    right: -125%;
  }
  100% {
    right: 100%;
  }
}

@keyframes alert-small {
  0% {
    right: -250%;
  }
  100% {
    right: 100%;
  }
}

body *, .btn {
  color: #005C7A;
}

.btn-sq:hover, .btn-rnd:hover {
  background-color: #006080;
}

#mode td .btn-sq.active {
	background-color: #006080;
}

.tabs .btns button.btn.active:focus{
  color: black;
}

.desc, .legend {
  padding: 10px 5px 10px 5px; 
  text-align: left;
  font-size: 18px;
  margin-left: 2px;
  margin-top: -3px;
  border-bottom: 1px solid var(--color-border);
  font-weight: bold;
}
.translated-rtl .leg-sw {
  float: right;
}
.translated-rtl .desc {
  text-align: right;
}

@media only screen and (min-width: 605px) {
  .fnd #banner * {
    font-size: 24px !important;
  }
}

@media only screen and (max-width: 750px), (max-height: 350px) {
  #marquee {
    width: 100%;
  } 
  .alert #marquee div>div>div {
    animation: alert-large 15s linear infinite;
  }
}

@media only screen and (max-width: 550px), (max-height: 350px) {
  #marquee {
    width: 100%;
  } 
  .alert #marquee div>div>div {
    animation: alert 15s linear infinite;
  }
}


@media only screen and (max-width: 350px), (max-height: 350px) {
  #marquee {
    width: 100%;
  } 
  .alert #marquee div>div>div {
    animation: alert-small 15s linear infinite;
  }
}


@media only screen and (max-width: 285px){
  .fnd #banner>div {
    margin-right: 115px;
  }
}

.fnd #banner * {
  font-size: 3vw;
}

#back-to-map.btn:hover:before {
  background-color: var(--color-light);
}
#back-to-map * {
  color: #fff;
}
.fnd #facilities {
  background-color: var(--color-medium);
}

.lst-it:nth-child(odd), .lst-it:nth-child(odd) .dtl .clps .content {
  background-color: var(--color-light);
}

button.btn.btn-rnd.btn-prv, button.btn.btn-rnd.btn-nxt {
  width: 24px;
}

@media only screen and (max-width: 285px){
  #back-to-map {
      width: 90px !important;
  }
}

@media only screen and (max-width: 360px){
  #back-to-map {
      width: 120px;
  }
}

.home-btn {
	position: absolute;
	left: 2px;
	top: 2px;
  right: 0;
  display: none;
}
.btn-home {
	position: absolute;
  left: 0;
  top: 112px;
	background-image: var(--home-icon, none);
  background-size: 30px;
}
.alert .facility .name {
  margin-left: 22px;
}

.facility ul {
  margin: 5px 10px;
}
.facility li {
  margin-left: -10px;
}
.f-tip {
  max-width: 250px;
}
.f-tip * {
  margin: 0;
  padding: 0;
  text-align: left;
}
.f-tip ul {
  padding: 3px;
  background-color: var(--color-medium);
  list-style-type: none;
}
.f-tip .facility li {
  margin-left: 0;
}


/* LEGEND */

.legend {
  display: none;
  padding-top: 10px;
}
.leg-sw.closed{
  background-color: #999999;

}
.leg-sw.open {
  background-color: #19DB17;

}
.leg-sw.open-soon {
  background-color: #F3E318;

}
.leg-sw.inactive {
  background-color: #0080A9;
  
}

.leg-sq .inactive {
  display: none;
}

.leg-it {
	height: 22px;
	margin-top: 5px;
	width: auto;
  display: inline-block;
  text-align: left;
}

.leg-it>span {
  margin-left: -5px;
  margin-right: 5px;
}

.leg-sw {
	float: left;
	width: 18px;
	height: 18px;
	margin: 0px 10px 5px 3px;
  background-color: var(--color-dark);
	border: 1px solid #1A1A1A;
	border-radius: 50%;
}

.leg {
  border: 1px solid #1A1A1A;
  margin: auto;
  width: 345px;
  padding: 5px 0px;
  background-color: var(--color-light-translucent);
}

@media screen and (max-width: 375px) {
  .leg {
    width: 90%;
  }
}
/* .chc-chc input:before {
  display: inline-block;
} */
.chc-chc.status label:before,
.facility.open-to-public .name:before,
.facility.opening-soon .name:before,
.facility.closed-to-public .name:before {
  display: inline-block;
  width: 18px;
  height: 18px;
  border: 1px solid #1A1A1A;
  content: ' ';
  border-radius: 50%;
  margin: 0 3px -4px -22px;
}
.translated-rtl .chc-chc.status label:before,
.translated-rtl .facility.open-to-public .name:before,
.translated-rtl .facility.opening-soon .name:before,
.translated-rtl .facility.closed-to-public .name:before {
  margin: 0 3px -4px 3px;
}
/* IE */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .translated-rtl .chc-chc.boro input {
    margin-left: -14px;
    margin-right: 8px;
  }
  .chc-chc.boro input {
    margin-right: -12px;
    margin-left: 8px;
  }

  .translated-rtl .chc-chc.status input {
    margin-left: -14px;
    margin-right: 8px;
  }
  .chc-chc.status input {
    margin-right: -10px;
    margin-left: 8px;
  }
}
.chc-chc.status label:before {
  margin: 0 7px -4px -4px;
}
.chc-chc.status label[for=chc-chc-5]:before,
.facility.open-to-public .name:before {
  background-color: #19DB17;
}

.chc-chc.status label[for=chc-chc-6]:before,
.facility.opening-soon .name:before   {
  background-color: #F3E318;
}
/* ... */

